NAVBAR header -- resolved spacing

--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -60,7 +60,7 @@
 
 .navbar-expand-lg {
   flex-flow: row;
-  justify-content: flex;
+  justify-content: space-between;
 }
 ::ng-deep .megaMenu{
   left: 15% !important;
